fixed a misspelling of distorted

--- a/foundations/04-chaining-selectors/style.css
+++ b/foundations/04-chaining-selectors/style.css
@@ -5,7 +5,7 @@
     width: 300px;
 }
 
-.avatar.distored {
+.avatar.distorted {
     width: 200px;
     height: 400px;
 }
